<!-- 
/*
 *   Copyright 2012 Shell M. Shrader
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
 */
 -->
 <resources>

    <string name="app_name">Adaptive Tuner</string>
    <string name="menu_connect">Bluetooth Connect</string>
    <string name="menu_usb_connect">USB Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_save_map">Save ECU File</string>
    <string name="menu_info">Debug Info</string>
    <string name="menu_fuel_cut">Fuel Cut</string>
    <string name="menu_exit">Quit</string>
    
    <string name="title_activity_main">Adaptive Tuner</string>
    <string name="device_list">Bluetooth Device List</string>
    <string name="ignition">Ignition Learning</string>
    <string name="fuel">Fuel Learning</string>
    
    <string name="share_afr_log_heading">Share AFR Alerts using</string>
    <string name="share_log_all_heading">Share Log using</string>
    <string name="share_log_message" formatted="false">Log saved as %s</string>
    <string name="share_ecu_file_heading">Share ECU File using</string>
    
    <string name="tab_adaptive">Adaptive Monitor</string>
    <string name="tab_gauges">Gauges Dashboard</string>
    <string name="tab_fuel_map">Fuel Map</string>
    
    <string name="menu_prefs">Preferences</string>
    <string name="prefs_title">Adaptive Tuner Preferences</string>
    <string name="prefs_general_pref">General Preferences</string>
    
    <string name="prefs_uom_category">Unit of Measure</string>
    <string name="prefs_uom_temp_dialog_title">Selected Temperature Unit of Measure</string>
    <string name="prefs_uom_temp_title">Temperature</string>
    <string name="prefs_uom_pressure_dialog_title">Selected Pressure Unit of Measure</string>
   	<string name="prefs_uom_pressure_title">Fuel and Oil Pressure</string>   
	 
    <string name="prefs_connection_category">Connection Settings</string>
    <string name="prefs_connection_auto_connect">Automatic Connection on Startup</string>
    <string name="prefs_connect_on_charge">Autoconnect on Dock/Charge</string>
    <string name="prefs_connect_on_charge_wait_time">Time to wait before Connecting</string>
    <string name="prefs_connection_keep_device_awake">Keep Device Awake while Connected</string>
    
    <string name="prefs_display_category">Display Settings</string>
    <string name="prefs_show_auxt_on_adaptive_tab">Show AUX-T on Adaptive Tab</string>
    <string name="prefs_show_ssi4_on_adaptive_tab">Innovate SSI-4 Support</string>
    
    <string name="prefs_alerts_pref">Alerts &amp; Logging</string>
    
    <string name="prefs_alerts_audibles">Audible Alerts</string>
    <string name="prefs_alerts_audible_alerts">Android TTS Engine</string>
    
    <string name="prefs_audibles_max_map">MAP Threshold</string>
	<string name="prefs_audibles_max_mat">Intake Temperature Threshold</string>
	<string name="prefs_audibles_max_rpm">RPM Threshold</string>
	<string name="prefs_audibles_max_tps">Throttle Position Threshold</string>
	<string name="prefs_audibles_max_wat">Water Temperature Threshold</string>
		
    <string name="prefs_alert_afr_category">Visual AFR Alerts</string>
    <string name="prefs_alert_afrnottarget">Actual AFR vs Target AFR</string>
    <string name="prefs_alert_afrnottarget_tolerance_pref">AFR Tolerance</string>
    <string name="prefs_afr_alarm_logging">AFR Alert Logging</string>

    <string name="prefs_alert_temperature_category">Visual Temperature Alerts</string>
    <string name="prefs_alert_water_temperature">Water Temperature</string>    
	<string name="prefs_alert_water_temperature_minimum">Minimum Water Temperature</string>
	<string name="prefs_alert_water_temperature_maximum">Maximum Water Temperature</string>
	
	<string name="prefs_logging_category">General Logging</string>
	<string name="prefs_logging_enabled">Log All Data</string>
	
	<string name="prefs_show_boost_gauge">Show Boost Gauge instead of MAP</string>
	<string name="prefs_max_boost">Maximum Boost Pressure</string>
	
	<string name="afr_gauge">AFR Gauge</string>
	<string name="map_gauge">MAP Gauge</string>
	<string name="tachometer">Tachometer</string>
	<string name="water_gauge">Water Temperature Gauge</string>
	<string name="iat_gauge">Intake Temperature Gauge</string>
	<string name="tps_gauge">Throttle</string>
		
	<string name="edit_cell_message">Edit Fuel Cell</string>
	
	<string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    
    <string name="save_ecu_title">ECU File</string>
    <string name="save_ecu_message">Saving</string>
    
    <string name="read_fuel_map_title">Fuel Map</string>
    <string name="read_fuel_map_message">Reading map values</string>
    
    <string name="changelog_full_title">Adaptive Tuner Change Log</string>
    <string name="changelog_title">What\'s New in Adaptive Tuner</string>
    <string name="changelog_ok_button">OK</string>
    
    <string name="service_name">Adaptive Tuner Connection Service</string>
    <string name="service_connecting">Connecting to %s. . .</string>
    <string name="service_bt_connected">Connected to %s</string>
    <string name="service_usb_connected">Connected via USB</string>
    <string name="service_disconnected">Disconnected</string>
    
    <string name="no_map_for_mode_selected">There is no MAP %d for the tuning mode selected</string>
    
    <string name="audible_max_rpm">warning: RPM is %d</string>
    <string name="audible_max_map">warning: map is %d kay pee ay</string>
    <string name="audible_max_wat">warning: water temperature is %d degrees</string>
    <string name="audible_max_mat">warning: intake temperature is %d degrees</string>
    <string name="audible_max_tps">warning: throttle is %d percent open</string>
    
</resources>