<!-- 
/*
 *   Copyright 2012 Shell M. Shrader
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
 */
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group>
	    <item android:id="@+id/menu_share"
	        android:orderInCategory="100"
	        android:icon="@drawable/ic_action_share"
	        android:showAsAction="always"
	        android:visible="false" />
	</group>
	<group>
	    <item android:id="@+id/menu_connect"
	        android:title="@string/menu_connect"
	        android:orderInCategory="100"
	        android:showAsAction="never" />
    </group>
   	<group>
	    <item android:id="@+id/menu_usb_connect"
	        android:title="@string/menu_usb_connect"
	        android:orderInCategory="100"
	        android:showAsAction="never" />
    </group>
	<group>
	    <item android:id="@+id/menu_prefs"
	        android:title="@string/menu_prefs"
	        android:orderInCategory="100"
	        android:showAsAction="never" />
    </group>
   	<group>
	    <item android:id="@+id/menu_save_map"
	        android:enabled="false"
	        android:title="@string/menu_save_map"
	        android:orderInCategory="100"
	        android:showAsAction="never" />
    </group>
	<group>
	    <item android:id="@+id/menu_info"
	        android:title="@string/menu_info"
	        android:orderInCategory="100"
	        android:showAsAction="never" />
    </group>
   	<group>
	    <item android:id="@+id/menu_exit"
	        android:title="@string/menu_exit"
	        android:orderInCategory="100"
	        android:showAsAction="never" />
    </group>
</menu>
